[package]
name = "jonlang"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Chacko <josephchacko2006@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "basic scripting language made to learn rust"
readme = "README.md"
homepage = "https://github.com/maverik-io"
repository = "https://github.com/maverik-io/jonlang-rust"
keywords = ["scripting", "jonlang"]
categories = ["compilers"]

[dependencies]
